syntax = "proto3";
option java_multiple_files = true;
package ph.matt.cart;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

message AllCartsRequest {

}

message CartRequest {
    int32 cartId = 1;
}

message CartRequestCollection {
    repeated CartRequest carts = 1;
}

service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
}

service GetAllCartsService {
    rpc getCarts(AllCartsRequest) returns (CartRequestCollection);
}
